--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
     "react-icons": "^5.3.0",
+    "react-router-dom": "^6.28.0",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
