--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
